# fmtna

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: cfg.rs  cli.rs  default.rs  engine.rs  exclude.rs  lib.rs  main.rs  naming_conventions.rs  params.rs  paths.rs  prompt.rs  revert.rs  utils.rs
src/default/: cli.rs  data.rs  engine.rs
src/exclude/: add.rs  cli.rs  del.rs  edit.rs  engine.rs
src/exclude/add/: cli.rs  data.rs  engine.rs
src/exclude/del/: cli.rs  data.rs  engine.rs
src/exclude/edit/: cli.rs  data.rs  engine.rs
src/revert/: cli.rs  data.rs  engine.rs
templates/: exclude.txt
