[package]
name = "fmtna"
version = "0.1.0"
edition = "2021"
authors = ["Yann Salmon"]
description = "A CLI app to format filenames according to a chosen naming convention."
readme = "README.md"
repository = "https://github.com/yanns1/fmtna"
license = "GPL-3.0"
keyworks = ["format", "filenames", "naming convention"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
confy = "0.6.1"
crossterm = "0.27.0"
lazy_static = "1.4.0"
path-absolutize = { version = "3.1.1", features = ["once_cell_cache"] }
regex = "1.10.4"
serde = { version = "1.0.202", features = ["derive"] }
unidecode = "0.3.0"
walkdir = "2"

[dev-dependencies]
serial_test = "3.1.1"
