[package]
name = "fmtna"
version = "1.0.3"
edition = "2021"
authors = ["Yann Salmon"]
description = "A CLI app to format filenames according to a chosen naming convention."
readme = "README.md"
repository = "https://github.com/yanns1/fmtna"
license = "GPL-3.0"
keyworks = ["format", "filenames", "naming convention"]
categories = ["command-line-utilities"]
exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
confy = "0.6.1"
crossterm = "0.27.0"
directories = "5.0.1"
edit-distance = "2.1.2"
lazy_static = "1.4.0"
linecount = "0.1.0"
path-absolutize = { version = "3.1.1", features = ["once_cell_cache"] }
regex = "1.10.4"
rev_lines = "0.3.0"
serde = { version = "1.0.202", features = ["derive"] }
tempfile = "3.10.1"
unidecode = "0.3.0"
walkdir = "2"

[dev-dependencies]
serial_test = "3.1.1"
